--- a/api-gateway.template
+++ b/api-gateway.template
@@ -47,7 +47,7 @@
 	      "ResourcePath": "/*"
 	    }],
 	    "RestApiId": {"Ref": "DDRApi"},
-	    "StageName": "LATEST"
+	    "StageName": "prod"
 	  }
 	},
 	"ApiGatewayCloudWatchLogsRole": {
@@ -89,7 +89,7 @@
 	  }
 	},
 	"ApiDeployment": {
-	  "Type": "AWS::ApiGateway::Deployment",
+		  "Type": "AWS::ApiGateway::Deployment",
 	  "DependsOn": ["GetScoreRequest"],
 	  "Properties": {
 	    "RestApiId": {"Ref": "DDRApi"},
@@ -182,11 +182,11 @@
             "Ref": "ArtifactBucket"
           },
           "S3Key": {
-          	"Fn::Sub": "${ArtifactKeyPrefix}assets/get_score.zip"
+          	"Fn::Sub": "${ArtifactKeyPrefix}assets/DDRScoreFetch.zip"
           }
         },
-        "Handler": "get_score.get_score",
-        "Runtime": "python2.7",
+        "Handler": "DDRScoreFetch.get_score",
+        "Runtime": "python3.6",
         "Timeout": "15",
         "Role": {
           "Fn::GetAtt": [
@@ -197,59 +197,53 @@
       }
     },
     "GetDanceScoreLambdaExecutionRole": {
-      "Properties": {
-        "AssumeRolePolicyDocument": {
-          "Statement": [
-            {
-              "Action": [
-                "sts:AssumeRole"
-              ],
-              "Effect": "Allow",
-              "Principal": {
-                "Service": [
-                  "lambda.amazonaws.com"
-                ]
-              }
-            }
-          ],
-          "Version": "2012-10-17"
-        },
-        "Policies": [
-          {
-            "PolicyDocument": {
-              "Statement": [
-                {
-                  "Action": [
-                    "logs:CreateLogGroup",
-                    "logs:CreateLogStream",
-                    "logs:PutLogEvents"
-                  ],
-                  "Effect": "Allow",
-                  "Resource": "arn:aws:logs:*:*:*"
-                }
-              ],
-              "Version": "2012-10-17"
-            },
-            "PolicyName": "LambdaLogging"
-          },
-          {
-            "PolicyDocument": {
-              "Statement": [
-                {
-                  "Action": [
-                    "dynamodb:*"
-                  ],
-                  "Effect": "Allow",
-                  "Resource": "*"
-                }
-              ],
-              "Version": "2012-10-17"
-            },
-            "PolicyName": "AllActionsDynamoDB"
-          }
-        ]
-      },
-      "Type": "AWS::IAM::Role"
+		"Type": "AWS::IAM::Role",
+		"Properties": {
+			"AssumeRolePolicyDocument": {
+				"Version": "2012-10-17",
+				"Statement": [{
+					"Effect": "Allow",
+					"Principal": {
+						"Service": ["lambda.amazonaws.com"]
+					},
+					"Action": ["sts:AssumeRole"]
+				}]
+			},
+			"Path": "/",
+			"Policies": [
+				{
+					"PolicyName": "DdrS3DynamodbAccess",
+					"PolicyDocument": {
+						"Version": "2012-10-17",
+						"Statement": [
+							{
+								"Effect": "Allow",
+								"Action": [
+									"logs:CreateLogGroup",
+									"logs:CreateLogStream",
+									"logs:PutLogEvents"
+								],
+								"Resource": "arn:aws:logs:*:*:*"
+							},
+							{
+								"Effect": "Allow",
+								"Action": [
+									"dynamodb:DeleteItem",
+									"dynamodb:GetItem",
+									"dynamodb:PutItem",
+									"dynamodb:Scan",
+									"dynamodb:Query",
+									"dynamodb:UpdateItem"
+								],
+								"Resource": [
+									{ "Fn::Sub": "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/*" }
+								]
+							}
+						]
+					}
+				}
+			]
+		}
     }
   },
   "Outputs": {
